version 0.9.9.552 (master branch, not yet released)
- added Italian translation (thanks to HostFat) 
- improve/update polish translation (thanks to Szary Czlowiek)
- add ability to copy TorChat ID to clipboard
- fix foreground colour of hint windows and notification windows 
  to always match current desktop theme

version 0.9.9.551
- Added Swedish translation (thanks to Åke Engelbrektson)
- Windows: update the bundled tor.exe to current stable version 0.2.2.35

version 0.9.9.550
- fix some string encoding problems (and crashes) with 
  non-ascii user names or folder names.
- Unix/Linux: make data folder and file permissions more restrictive
- Windows: update the bundled tor.exe to current stable version 0.2.2.34

version 0.9.9.534
- Windows: fix old scroll bug which reappeared on Windows 7
- added Russian translation

version 0.9.9.530
- fix some focus and focus-stealing problems
- improve the way the standard browser is found
- fix race condition in the GUI resulting in the same line sent twice
- Windows: update bundled Tor binary to version 0.2.1.30

version 0.9.9.515
- fix (regression): make notification window stay on top again
- fix wrong handling of new line characters in chat messages
- make main window always come to front when unhiding from tray

version 0.9.9.509
- fixed the focus stealing of the notification window on Windows
- made the notofication window less obtrusive, more native looking 
  and make it immediately disappear on mouse contact. 
- made the animation of the popup faster and look more natural.
- additional notification methods: knotify, gtknotify, growlnotify, xosd
- Mac OSX: more Mac conforming UI with menu bar
- Windows: use stable Tor-0.2.1.29 instead of experimental 0.2.2.20-alpha
- updated french translation
- remove annoying popup warning about debug log, we even allow logging of
  conversations now so this is only consequent.

version 0.9.9.458
- fixed crash that could happen while torchat was minimized to the tray
